# PlazaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Desh.plzprj  OpenGLEngine.sln  OpenGLEngine.vcxproj  OpenGLEngine.vcxproj.filters  PlazaEngineCoreConfig.cmake  PlazaEngineCoreConfig.cmake.in  README.md  Rust.plzprj  ShippingDLLs.rar  compileData.scor.incl  compileData.scor.t0000  compileData.scor.t0001  cpp.hint  danca.plzprj  imgui.ini  sceninha.plzscn  setdllpath.bat
.github/workflows/: cmake-single-platform.yml
Editor/: CopyPasteManager.cpp  CopyPasteManager.h  Editor.h  FileWatcher.cpp  Filewatcher.h  Project.cpp  Project.h  UndoManager.h  defaultScript.cs  premakeDefaultProject.lua
Editor/DefaultAssets/: DefaultAssets.h
Editor/DefaultAssets/NewProject/: .gitignore  CMakeLists.txt  CMakePresets.json
Editor/DragDrop/: DragDrop.h  DropFileScene.cpp  DropFileScene.h
Editor/EditorTools/: EditorTool.h  TerrainEditorTool.cpp  TerrainEditorTool.h
Editor/GUI/: EditorInspector.cpp  EditorInspector.h  FpsCounter.h  GuiWindow.h  Inspector.cpp  Inspector.h  MenuBar.cpp  MenuBar.h  TransformOverlay.cpp  TransformOverlay.h  gizmo.cpp  gizmo.h  guiMain.cpp  guiMain.h
Editor/ModelImporter/: ModelImporter.cpp  ModelImporter.h
Editor/ScriptManager/: NewCsScript.cpp  ScriptManager.h  ScriptReloadAssembly.cpp
Editor/SessionCache/: Cache.cpp  Cache.h
Editor/Settings/: EditorSettings.cpp  EditorSettings.h  ProjectGenerator.cpp  ProjectGenerator.h  SettingsSerializer.cpp  SettingsSerializer.h
Editor/Tools/: TerrainTool.h  Tool.h
Engine/: 1.model_loading.fs  Application.cpp  Application.h  asd.h  imgui.ini  main.cpp  main.h
Engine/Application/: Application.cpp  Application.h  ApplicationSizes.h  EditorCamera.cpp  EditorCamera.h  EngineSettings.h  EntryPoint.cpp  EntryPoint.h  ModelLoader.h  PickingTexture.cpp  PickingTexture.h  Window.cpp  Window.h
Engine/Components/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Mesh.h  Model.h
Engine/Core/: Any.h  ComponentMapStructure.cpp  ComponentMapStructure.h  Engine.cpp  Engine.h  EnumReflection.h  FrameBuffer.cpp  FrameBuffer.h  Mono.cpp  Mono.h  Physics.cpp  Physics.h  PreCompiledHeaders.cpp  PreCompiledHeaders.h  RenderGroup.cpp  RenderGroup.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Script.h  Skybox.h  Standards.cpp  Standards.h  Time.cpp  Time.h  UUID.cpp  UUID.h
Engine/ECS/: ColliderSystem.cpp  ComponentPool.cpp  ComponentPool.h  ECSManager.cpp  ECSManager.h  EntitySystem.cpp  RigidBodySystem.cpp  TransformSystem.cpp
Engine/Editor/: Editor.cpp  Editor.h
Engine/GUI/: FpsCounter.h  Hierarchy.cpp  Hierarchy.h  Inspector.h  MenuBar.cpp  MenuBar.h  TransformOverlay.cpp  TransformOverlay.h  gizmo.cpp  gizmo.h  guiMain.cpp  guiMain.h
Engine/Shaders/: 1.model_loading.fs  1.model_loadingFragment.glsl  1.model_loadingVertex.glsl  ComputeShader.h  Shader.h  objectPickingFragment.glsl  vulkanTriangle.frag  vulkanTriangle.vert
Engine/Threads/: ThreadManager.cpp  ThreadManager.h  Threads.cpp  Threads.h
Engine/Utils/: binaryUtils.h  fileUtils.h  glmUtils.h  vectorUtils.h  yamlUtils.cpp  yamlUtils.h
PlazaScriptCore/: Component.cs  Coroutines.cs  Input.cs  InternalCalls.cs  Mathf.cs  Matrix4x4.cs  Physics.cs  PlazaScriptCore.csproj  Quaternion.cs  Screen.cs  Time.cs  Vector2.cs  Vector3.cs  Vector4.cs
PlazaScriptCore/Properties/: AssemblyInfo.cs
dll/: PhysXCharacterKinematic_static_64.lib
enc_temp_folder/105b9affe017fa2883fd35c9548d2cde/: lightSorterCompute.glsl
enc_temp_folder/1132ab394c38301c3f437eb8c3d877d/: gizmo.h
enc_temp_folder/1234c88d6e7fc33b503ad32dc442b/: RigidBody.cpp
enc_temp_folder/1750d789769f34a6149b3f14f3deae3c/: gizmo.h
enc_temp_folder/1a5016abff8164bbf74b6aac3683b0c3/: Time.cpp
enc_temp_folder/26d76d13033f184e62b58b4c8276c/: TransformInspector.h
enc_temp_folder/29aee3d8abf88dffd4834c49f83d66/: MouseButtonCallback.cpp
enc_temp_folder/2cc2d1a4dd22df9232e392e7e3d538e3/: TransformInspector.h
enc_temp_folder/2ffbf8eb0c0e161433bc782e0a887/: gizmo.h
enc_temp_folder/38c8132d5c9e821fb33ac8b03196d453/: Mesh.h
enc_temp_folder/3ea9c7a3f9e3e49fce47ab1bcbf913b/: Shadows.cpp
enc_temp_folder/40e9672075f281de73f8f09682bbc36d/: Application.cpp
enc_temp_folder/41859d48de1c4225ceaf09bc6edb9d0/: ProjectManager.cpp
enc_temp_folder/445ac560f7c0479cd9c6acf649cb5cdc/: gizmo.h
enc_temp_folder/48f204168319c686bd294d84836656/: RigidBody.cpp
enc_temp_folder/4d24cddb867c61da26391b84a99c2e0/: 1.model_loadingFragment.glsl
enc_temp_folder/541bad3364aff11257344c135272c4dc/: MouseButtonCallback.cpp
enc_temp_folder/5425e2459f3845cc805171e6322bf432/: ScriptReloadAssembly.cpp
enc_temp_folder/564286473976fb6d2467c143213c9e9/: Transform.cpp
enc_temp_folder/572bec784ab4dd7dc24a32f62b376a8/: gizmo.h
enc_temp_folder/60ca10c1b63de8ffd7e7db11af478f24/: MouseButtonCallback.cpp
enc_temp_folder/65a3372bb316826f99731b2cb6fddd9/: ScreenSpaceReflections.cpp
enc_temp_folder/65c13b4e27da746920bd17250103d29/: Renderer.h
enc_temp_folder/6888bed614a745808aeeb17ec72c739/: PickingTexture.cpp
enc_temp_folder/6cab35b655ca4cf8eea7ad76754aa14/: gizmo.cpp
enc_temp_folder/6f60fdb7492ea62c188fd947a7cbb2f8/: gizmo.h
lib/: DirectXTex.lib  LowLevelAABB_static.lib  LowLevelAABB_static_64.lib  LowLevelAABB_staticd.lib  OpenAL32.exp  OpenAL32.lib  OpenAL32d.exp  OpenAL32d.lib  PVDRuntime_64.exp  PVDRuntime_64.lib  PhysXCharacterKinematic_static.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.lib  PhysXFoundation.exp  PhysXFoundation.lib  PhysXFoundationd.exp  PhysXFoundationd.lib  PhysXPvdSDK_static.lib  PhysXTask_static.lib  PhysXTask_static_64.lib  PhysXVehicle2_static.lib  PhysXVehicle2_static_64.lib  PhysX_64.lib  SceneQuery_static_64.lib  SceneQuery_staticd.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib  TracyClient.lib  TracyClientd.exp  TracyClientd.lib  al-excommon.lib  al-excommond.lib  alcommon.lib  alcommond.lib  assimp-vc143-mt.exp  assimp-vc143-mtd.exp  deflated.exp  deflated.lib  eglib.lib  freetype.lib  (+10 more)
source/: CMakeLists.txt
(+484 files in other folders)
